# cookiecutter-poetry

./: .pre-commit-config.yaml  Makefile  README.md  README_GIT_SUB_MOD.md  cookiecutter.json  mkdocs.yml  pyproject.toml
{{cookiecutter.project_name}}/: .pre-commit-config.yaml  LICENSE  Makefile  pyproject.toml
